Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -44,19 +44,32 @@
 <body>
   <header>
     <h1>EsPCEx - Assuntos da Prova</h1>
-    <p>Prepare-se para ser um Cadete do Exército Brasileiro</p>
+    <p>Ana Carolina - Prepare-se para ser uma Cadete do Exército Brasileiro</p>
   </header>
   <div class="container">
     <h2>📅 Estrutura da Prova</h2>
-    <p><strong>Dia 1:</strong> Português (20), Redação, Física (12), Química (12)<br>
-    <strong>Dia 2:</strong> Matemática (20), Geografia (12), História (12), Inglês (12)</p>
-
+    <p><strong>Dia 1:</strong> 
+<li>Português (20)</li>
+<li>Redação</li>
+<li>Física (12)</li>
+<li>Química (12)</li>
+<ul>
+    <strong>Dia 2:</strong> 
+<li>Matemática (20)</li>
+<li>Geografia (12)</li>
+<li>História (12)</li>
+<li>Inglês (12)</li>
+<ul>
     <h2>📖 Português</h2>
     <ul>
       <li>Interpretação de texto</li>
       <li>Gramática normativa</li>
-      <li>Classes gramaticais, concordância, regência</li>
-      <li>Sintaxe, crase, figuras de linguagem</li>
+      <li>Classes gramaticais</li>
+<li>Concordância</li>
+<li>Regência</li>
+      <li>Sintaxe</li>
+<li>Crase</li>
+<li>Figuras de linguagem</li>
       <li>Literatura brasileira</li>
     </ul>
 
@@ -68,44 +81,71 @@
 
     <h2>🧪 Física</h2>
     <ul>
-      <li>Cinemática, Dinâmica, Leis de Newton</li>
-      <li>Energia, impulso, termologia</li>
-      <li>Óptica, eletricidade, hidrostática</li>
+      <li>Cinemática</li>
+<li>Dinâmica</li>
+<li>Leis de Newton</li>
+      <li>Energia</li>
+<li>Impulso</li>
+<li>Termologia</li>
+      <li>Óptica</li>
+<li>Eletricidade</li>
+<li>Hidrostática</li>
     </ul>
 
     <h2>🧫 Química</h2>
     <ul>
-      <li>Estrutura atômica, ligações, funções inorgânicas</li>
-      <li>Reações, estequiometria, soluções</li>
+      <li>Estrutura atômica</li>
+<li>Ligações</li>
+<li>Funções inorgânicas</li>
+      <li>Reações</li>
+<li>Estequiometria</li>
+<li>Soluções</li>
       <li>Química orgânica: hidrocarbonetos, funções oxigenadas</li>
     </ul>
 
     <h2>📐 Matemática</h2>
     <ul>
-      <li>Álgebra, funções, progressões</li>
-      <li>Trigonometria, geometria plana e espacial</li>
-      <li>Combinatória, probabilidade, matrizes</li>
+      <li>Álgebra</li>
+<li>Funções</li>
+<li>Progressões</li>
+      <li>Trigonometria</li>
+<li>Geometria plana e espacial</li>
+      <li>Combinatória</li>
+<li>Probabilidade</li>
+<li>Matrizes</li>
     </ul>
 
     <h2>🌍 Geografia</h2>
     <ul>
-      <li>Cartografia, relevo, clima, vegetação</li>
-      <li>Hidrografia, geopolítica, urbanização</li>
-      <li>Globalização, blocos econômicos</li>
+      <li>Cartografia</li>
+<li>Relevo</li>
+<li>Clima</li>
+<li>Vegetação</li>
+      <li>Hidrografia</li>
+<li>Geopolítica</li>
+<li>Urbanização</li>
+      <li>Globalização</li>
+<li>Blocos econômicos</li>
     </ul>
 
     <h2>📜 História</h2>
     <ul>
       <li>História do Brasil: Colônia à República</li>
-      <li>Ditadura, Nova República, História Geral</li>
-      <li>Guerras Mundiais, Revoluções, Nazismo</li>
+      <li>Ditadura</li>
+<li>Nova República</li>
+<li>História Geral</li>
+      <li>Guerras Mundiais</li>
+<li>Revoluções</li>
+<li>Nazismo</li>
     </ul>
 
     <h2>🇬🇧 Inglês</h2>
     <ul>
       <li>Interpretação de texto</li>
       <li>Gramática: tempos verbais, pronomes, preposições</li>
-      <li>Voz passiva, discurso indireto, modal verbs</li>
+      <li>Voz passiva</li>
+<li>Discurso indireto</li>
+<li>Modal verbs</li>
     </ul>
   </div>
   <footer>
