Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 <body>
   <header>
     <h1>EsPCEx - Assuntos da Prova</h1>
-    <p>Ana Carolina - Prepare-se para ser uma Cadete do Exército Brasileiro</p>
+    <h1>ANA CAROLINA</h1>
+    <p>Prepare-se para ser uma Cadete do Exército Brasileiro</p>
   </header>
   <div class="container">
     <h2>📅 Estrutura da Prova</h2>
