Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
   </header>
   <div class="container">
     <h2>📅 Estrutura da Prova</h2>
-    <p><strong>Dia 1:</strong> 
+    <strong>Dia 1:</strong> 
 <li>Português (20)</li>
 <li>Redação</li>
 <li>Física (12)</li>
 <li>Química (12)</li>
 <ul>
-    <p><strong>Dia 2:</strong> 
+    <strong>Dia 2:</strong> 
 <li>Matemática (20)</li>
 <li>Geografia (12)</li>
 <li>História (12)</li>
