Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </ul>
   </div>
   <footer>
-    <p>Site criado para auxiliar candidatos à EsPCEx. Boa sorte nos estudos!</p>
+    <p>Boa sorte nos estudos!</p>
   </footer>
 </body>
 </html>
